--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: csvwriter
 description: Lightweight, cross-platform Dart package to write CSV data to a `StringSink`. Supports and extends RFC 4180.
-version: 1.2.0
+version: 1.3.0
 homepage: https://github.com/d-markey/csvwriter
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <4.0.0"
 
 # dependencies:
 
